--- a/.htaccess
+++ b/.htaccess
@@ -14,9 +14,51 @@ Redirect 301 /qlogin https://quiz.aryabhat.org/accounts/login/
 Redirect 301 /council https://docs.google.com/forms/d/14Pg1IM3zDMF3YHQaWXqqV_8i_scEwOrxsN7waUOMGpg/viewform
 
 
-Redirect 301 /Q19 https://drive.google.com/open?id=1mwZBZSv8BvjsLz-qT4oOPaAFgI2NOnQW
-
 Redirect 301 /alumni https://docs.google.com/spreadsheets/d/17apGNnpKCb7HI3DT_XmfVOj8acqAXLUazN4rV8z2z6g/edit#gid=0
 Redirect 302 /talks https://youtu.be/W-ki7dAJ25E
 Redirect 302 /qintro https://youtu.be/l-0mmcLsjM0
+Redirect 302 /studyvideo https://youtu.be/s5_1iDcbVrQ
+Redirect 302 /requestevent https://docs.google.com/forms/d/e/1FAIpQLSfxU6bReItNXDLkE0ZSNcR-K1lkVrwrFd_ZcHeIoy5vDajABg/viewform
 
+Redirect 302 /quiztesting https://demoquiz-service-52607773783.asia-south1.run.app/
+
+Redirect 302 /faqs/WhatIsAstroQuiz https://www.youtube.com/watch?v=hjg3ed7WKK4&t=0s
+Redirect 302 /faqs/ObjectiveOfQuiz https://www.youtube.com/watch?v=hjg3ed7WKK4&t=24s
+Redirect 302 /faqs/WhatisAryabhat https://www.youtube.com/watch?v=hjg3ed7WKK4&t=74s
+Redirect 302 /faqs/WhenWasFirstQuiz https://www.youtube.com/watch?v=hjg3ed7WKK4&t=102s
+Redirect 302 /faqs/WhoCanParticipate https://www.youtube.com/watch?v=hjg3ed7WKK4&t=116s
+Redirect 302 /faqs/OustideMPStudents https://www.youtube.com/watch?v=hjg3ed7WKK4&t=137s
+Redirect 302 /faqs/WhatDoSelectedGet https://www.youtube.com/watch?v=hjg3ed7WKK4&t=150s
+Redirect 302 /faqs/WhenAreCamps https://www.youtube.com/watch?v=hjg3ed7WKK4&t=191s
+Redirect 302 /faqs/AnyEntryFees https://www.youtube.com/watch?v=hjg3ed7WKK4&t=203s
+Redirect 302 /faqs/SecondaryLevelFees https://www.youtube.com/watch?v=hjg3ed7WKK4&t=216s
+Redirect 302 /faqs/ParentsStayAtAryabhat https://www.youtube.com/watch?v=hjg3ed7WKK4&t=252s
+Redirect 302 /faqs/KindOfQuestions https://www.youtube.com/watch?v=hjg3ed7WKK4&t=272s
+Redirect 302 /faqs/QuizSyllabus https://www.youtube.com/watch?v=hjg3ed7WKK4&t=309s
+Redirect 302 /faqs/WhereToStudy https://www.youtube.com/watch?v=hjg3ed7WKK4&t=342s
+Redirect 302 /faqs/HowToRegister https://www.youtube.com/watch?v=hjg3ed7WKK4&t=364s
+Redirect 302 /faqs/SchoolRegistration https://www.youtube.com/watch?v=hjg3ed7WKK4&t=399s
+Redirect 302 /faqs/MobileForRegistration https://www.youtube.com/watch?v=hjg3ed7WKK4&t=440s
+Redirect 302 /faqs/ConfirmationOfRegistration https://www.youtube.com/watch?v=hjg3ed7WKK4&t=449s
+Redirect 302 /faqs/ChangeOfMobile https://www.youtube.com/watch?v=hjg3ed7WKK4&t=466s
+Redirect 302 /faqs/MarkingPattern https://www.youtube.com/watch?v=hjg3ed7WKK4&t=476s
+Redirect 302 /faqs/DemoQuizRecommendedBooks https://www.youtube.com/watch?v=hjg3ed7WKK4&t=491s
+Redirect 302 /faqs/SecondaryExamWhen https://www.youtube.com/watch?v=hjg3ed7WKK4&t=536s
+Redirect 302 /faqs/SecondaryExamOutline https://www.youtube.com/watch?v=hjg3ed7WKK4&t=558s
+Redirect 302 /faqs/LastDateRegistration https://www.youtube.com/watch?v=hjg3ed7WKK4&t=588s
+Redirect 302 /faqs/QuizDates https://www.youtube.com/watch?v=hjg3ed7WKK4&t=597s
+Redirect 302 /faqs/HowWillIndividualsParticipate https://www.youtube.com/watch?v=hjg3ed7WKK4&t=623s
+Redirect 302 /faqs/ComputersNeededForSchool https://www.youtube.com/watch?v=hjg3ed7WKK4&t=648s
+Redirect 302 /faqs/IsInternetRequiredForSchool https://www.youtube.com/watch?v=hjg3ed7WKK4&t=730s
+Redirect 302 /faqs/WhereIsSecondaryTraining https://www.youtube.com/watch?v=hjg3ed7WKK4&t=764s
+Redirect 302 /faqs/PreferredDatesForTraining https://www.youtube.com/watch?v=hjg3ed7WKK4&t=775s
+Redirect 302 /faqs/PrizeForWinners https://www.youtube.com/watch?v=hjg3ed7WKK4&t=793s
+Redirect 302 /faqs/VisitScheduleObsevatoryChoice https://www.youtube.com/watch?v=hjg3ed7WKK4&t=855s
+Redirect 302 /faqs/TripOrganizationAndEscorts https://www.youtube.com/watch?v=hjg3ed7WKK4&t=897s
+Redirect 302 /faqs/NoTADA https://www.youtube.com/watch?v=hjg3ed7WKK4&t=940s
+Redirect 302 /faqs/ParticipateEveryYear https://www.youtube.com/watch?v=hjg3ed7WKK4&t=968s
+Redirect 302 /faqs/PassingMarks https://www.youtube.com/watch?v=hjg3ed7WKK4&t=995s
+Redirect 302 /faqs/ScoreImprovementAttempt https://www.youtube.com/watch?v=hjg3ed7WKK4&t=1014s
+Redirect 302 /faqs/DoubleRegistration https://www.youtube.com/watch?v=hjg3ed7WKK4&t=1040s
+Redirect 302 /faqs/QuizDateMissed https://www.youtube.com/watch?v=hjg3ed7WKK4&t=1055s
+Redirect 302 /faqs/MessageForParticipants https://www.youtube.com/watch?v=hjg3ed7WKK4&t=1069s
